<?xml version="1.0"?>
<package>
  <name>wit_driver</name>
  <version>0.0.0</version>
  <description>Driver for wit motion IMU</description>

  <author email="goran.vasiljevic@fer.hr">Goran Vasiljevic</author>

  <maintainer email="goran.vasiljevic@fer.hr">Goran Vasiljevic</maintainer>

  <license>BSD</license>

 <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
